# stm32-

./: CMakeLists.txt  STM32F103XX_FLASH.ld  openocd.cfg  readme.md
APP/: CMakeLists.txt  main.c
APP/Inc/: uart_ota.h
APP/Src/: uart_ota.c
BSP/: CMakeLists.txt  bsp.c  bsp.h  bsp_msg.h
BSP/Common/modbus/: modbus_slave.c  modbus_slave.h
BSP/Inc/: bsp_dwt.h  bsp_spi_bus.h  bsp_uart_fifo.h
BSP/Src/: bsp_timer.c  bsp_uart_fifo.c  bsp_user_lib.c
Drivers/: CMakeLists.txt
Middle/letter_shell/: CMakeLists.txt  shell_cfg_user.h  shell_port.c  shell_port.h
cubemx/: .mxproject  bootloader.ioc
